<resources>
    <string name="app_name">OkayTravel</string>
    <string name="title_login">Авторизация</string>
    <string name="title_sign_up">Регистрация</string>
    <string name="prompt_username">Имя пользователя</string>
    <string name="prompt_email">Почта</string>
    <string name="prompt_username_or_email">Имя пользователя или почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_password_again">Пароль ещё раз</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_create_account">Зарегистрируйтесь</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="invalid_username">Неверное имя пользователя или почта</string>
    <string name="login_failed">Авторизация неуспешна</string>
    <string name="skip_login">Пропустить вход</string>

    <string name="unknownError">Неизвестная ошибка, обратитесь в службу поддержки</string>
    <string name="invalidUsernameSize">Имя пользователя должно быть не меньше 3 и не больше 20 символов</string>
    <string name="notMatchPasswords">Пароли не совпадают</string>
    <string name="invalidEmail">Некорректный адрес электронной почты</string>
    <string name="invalidPasswordSize">Пароль должен быть не меньше 8 символов</string>
    <string name="noInternetConnection">Нет подключения к интернету</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="syncError">Ошибка синхронизации</string>
    <string name="tripsMenuItemText">Мои поездки</string>
    <string name="profileMenuItemText">Профиль</string>
    <string name="tripsMapMenuItemText">Карта поездок</string>
    <string name="loginAsAnonymousAction">Продолжить без входа</string>
    <string name="usernameError">Это имя нельзя использовать</string>
    <string name="emptyFieldsError">Заполните все поля</string>
    <string name="invalidTripDuration">Некорректная продолжительность</string>
    <string name="syncAnonymUserAsk">Синхронизировать ваши раннее добавленные данные с созданным аккаунтом?</string>
    <string name="yesButton">Да</string>
    <string name="noButton">Нет</string>
    <string name="noTripsText">У вас еще нет поездок</string>
    <string name="addTripContentDescription">Добавляет новую поездку</string>
    <string name="addTripFABText">Новая поездка</string>
    <string name="newTrip">Новая поездка</string>
    <string name="noAccountAsk">Нет аккаунта?</string>
    <string name="signUpRecommend">Сейчас вы не авторизованы. Зарегистрируйтесь и авторизуйтесь для синхронизации и сохранения ваших данных</string>
    <string name="showNoMore">Больше не показывать</string>
    <string name="places">Места</string>
    <string name="budget">Бюджет</string>
    <string name="things">Вещи</string>
    <string name="addPlaceButton">Добавить место</string>
    <string name="remoteError">Ошибка на удаленном сервере</string>
    <string name="networkError">Ошибка сети</string>
    <string name="searchIsEmpty">Ничего не найдено</string>
    <string name="budgetAsk">Собираетесь потратить деньги в этом месте?</string>
    <string name="budgetCategoryAsk">На что?</string>
    <string name="placeDateAsk">Выберите дату посещения места</string>
    <string name="budgetAmountAsk">Сколько?</string>
    <string name="invalidBudgetAmount">Некорректная сумма бюджета</string>
    <string name="haveAccountAsk">Уже есть аккаунт?</string>
    <string name="action_sign_in_from_signup">Войдите</string>
    <string name="cancelButton">Отмена</string>
    <string name="addButton">Добавить</string>
    <string name="addThingBtn">Добавить вещь</string>
    <string name="thingNameAsk">Название вещи</string>
    <string name="invalidThingName">Слишком длинное название вещи</string>
    <string name="notAlreadyTaken">Ещё не собраны</string>
    <string name="alreadyTaken">Уже собраны</string>
    <string name="cancelThingsEdit">Отменить</string>
    <string name="save">Сохранить</string>
    <string name="confirmActionAsk">Сохранить изменения?</string>
    <string name="finishThingsEdit">Сначала закончите редактирование вещей</string>
    <string name="tripAddAllDataOwnPlace">Отлично! Едем в %1$s!</string>
    <string name="openNavigationDrawer">Открыть меню</string>
    <string name="closeNavigationDrawer">Закрыть меню</string>
    <string name="addTrip">Создать поездку</string>
    <string name="startDateAsk">Выберите дату начала</string>
    <string name="showRoute">Показать маршрут</string>
    <string name="showPlace">Показать место на карте</string>
    <string name="routeError">Не удалось построить маршрут</string>
    <string name="buyPremium">Купить премиум</string>
    <string name="shouldBuyPremium">Необходимо купить премиум-аккаунт</string>
    <string name="needToSignUp">Сначала зарегистрируйтесь</string>
    <string name="successPremiumBuy">Поздравляем с покупкой!</string>
    <string name="whereAsk">Куда едем?</string>
    <string name="startCityTyping">Начните вводить название города</string>
    <string name="duration">Длительность (в днях)</string>
    <string name="tooLongCategory">Слишком длинное название категории</string>
    <string name="introTitle1">Добавляйте места</string>
    <string name="introDesc1">И стройте между ними маршруты!</string>
    <string name="introTitle2">Планируйте бюджет</string>
    <string name="introDesc2">На круговой диаграмме вы увидите все ваши планы на расход денег</string>
    <string name="introTitle3">Планируйте, что хотите взять с собой</string>
    <string name="introDesc3">Отметьте вещи, которые хотите взять с собой в поездку</string>
    <string name="tripFinished">Поездка уже завершилась</string>
</resources>
