<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:padding="15dp"

    android:id="@+id/bottomAddPlaceSheet"
    android:background="@color/white"
    app:behavior_hideable="true"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/placeNameView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/placeFullAddressView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/placeDate"
                android:hint="@string/placeDateAsk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/budgetAsk"/>

            <RadioGroup
                android:id="@+id/budgetRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/noBudgetButton">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yesBudgetButton"
                    android:text="@string/yesButton"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noBudgetButton"
                    android:text="@string/noButton"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/placeBudgetCategory"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/budgetCategoryAsk"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/placeBudgetAmount"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/budgetAmountAsk"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addPlaceBtn"
            android:text="@string/addPlaceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>