<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="20sp"
    android:orientation="vertical"
    android:background="@drawable/login_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_login"
        android:textColor="#000"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_marginTop="150sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_input_bg">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="25sp"
            android:drawableLeft="@android:drawable/ic_dialog_email"
            android:hint="@string/prompt_username_or_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10sp"
            android:layout_marginVertical="25sp"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:drawableRight="@android:drawable/ic_menu_view"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        <androidx.cardview.widget.CardView
            android:layout_width="250sp"
            android:layout_height="40sp"
            android:layout_marginVertical="5sp"
            android:clickable="true"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="15sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/action_sign_in_short"
                    android:textColor="#fff"
                    android:textSize="20sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:clickable="true"
        android:fontFamily="sans-serif-black"
        android:text="@string/action_sign_up"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20sp"
        android:clickable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="bottom"
        android:text="@string/skip_login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
</LinearLayout>
