<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profileImage"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/profile"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"/>

            <TextView
                android:id="@+id/usernameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/profileImage"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/userInfoLayout">

        <Button
            android:id="@+id/openLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/openSignUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_create_account"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </LinearLayout>

</RelativeLayout>